nav component updates

--- a/src/app/components/common/nav/nav.component.html
+++ b/src/app/components/common/nav/nav.component.html
@@ -1,11 +1,10 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark-blue ">
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 m-auto">
+      <li class="nav-item">
+        <a class="navbar-brand" href="#"><img class="navbar-brand"  height="30" src="./../../../../assets/images/logo.png"/></a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
@@ -16,15 +15,15 @@
         <a class="nav-link" href="#speaker">Speakers</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#event-sponsors">Sponsors</a>
+        <a class="nav-link" href="#event-sponsors">Sponsors</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
       <li class="nav-item buy-tickets">
         <a href="#tickets">Tickets</a>
       </li>
     </ul>
-   
+
   </div>
 </nav>
