added animation to sponsor section

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -28,7 +28,7 @@
     </div>
   </section>
 
-  <section id="sponsors" *ngIf="showpackages">
+  <section id="sponsors" *ngIf="showpackages" [@fadeInOut] >
     <div class="container">
         <header>
           <h2>Sponsorship Packages</h2>
